--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-
+    <h1>Gti test small push</h1>
     <h2>Git test Web Development Second</h2>
     <h3>I am just adding some random text for Send small incremental changes to git</h3>
         <p>I am just adding some random text for Send small incremental changes to git 
