--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    
     <title>Document</title>
 </head>
 <body>
@@ -16,6 +17,9 @@
                 I am just adding some random text for Send small incremental changes to git 
                     I am just adding some random text for Send small incremental changes to git 
                         I am just adding some random text for Send small incremental changes to git  </p>
-    
+  
+                        <img src="images/chittagong_bandarban.jpg" alt="">
+                        <img src="images/chittagong_coxs_bazar.jpg" alt="">
+                        <img src="images/chittagong_khagrachari.jpg" alt="">
 </body>
 </html>
